added coloring books, deleted summer reads (2 slides)

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -2,6 +2,23 @@
 
 <div class="w3-content w3-display-container">
 
+  <div class="mySlides my-fade">
+    <figure class="slider">
+        <figure>
+            <a href="http://www.rbdigital.com/washingtoncomn/service/magazines/landing?q=%2Fadult-coloring-books%2F&p_num=1" style="text-decoration: none;">
+                <img src="/ImageRepository/Document?documentID=938" alt="">
+                <figcaption>
+                    <section>
+                        <h4>Got stress?</h4>
+                        <p>Check out our online coloring books!
+                        <br>Download, print, RELAX.</p>
+
+                    </section>
+                </figcaption>
+            </a>
+        </figure>
+    </figure>
+</div>
 
   <div class="mySlides my-fade">
       <figure class="slider">
@@ -50,70 +67,6 @@
 
 
 
-    <div class="mySlides my-fade">
-      <figure class="slider">
-          <figure>
-              <a href="/409/Kids-Summer-Reading" style="text-decoration: none;">
-                  <img src="/ImageRepository/Document?documentID=841" alt="">
-                  <figcaption>
-                      <section>
-                          <h4>BOOKAWOCKY</h4>
-                          <p>Summer Reading Program for Kids
-                          <br>
-                          June 10 - August 12</p>
-
-
-                      </section>
-                  </figcaption>
-              </a>
-          </figure>
-      </figure>
-  </div>
-
-  <div class="mySlides my-fade">
-      <figure class="slider">
-          <figure>
-              <a href="/410/Teen-Summer-Reading" style="text-decoration: none;">
-                  <img src="/ImageRepository/Document?documentID=840" alt="">
-                  <figcaption>
-                      <section>
-                          <h4>BOOKAWOCKY</h4>
-                          <p>Summer Reading Program for Teens
-                          <br>
-                          June 10 - August 12</p>
-
-
-                      </section>
-                  </figcaption>
-              </a>
-          </figure>
-      </figure>
-  </div>
-
-
-    <div class="mySlides my-fade">
-        <figure class="slider">
-            <figure>
-                <a href="/411/Adult-Summer-Reading" style="text-decoration: none;">
-                    <img src="/ImageRepository/Document?documentID=839" alt="">
-                    <figcaption>
-                        <section>
-                            <h4>10,000 EXPERIENCES
-                            <br>
-                            at Your Library</h4>
-                            <p>Summer Reading Program for Adults
-                            <br>
-                            June 10 - August 12</p>
-
-
-                        </section>
-                    </figcaption>
-                </a>
-            </figure>
-        </figure>
-    </div>
-
-
 
     <div class="w3-center w3-section" style="width:100%">
         <!-- advance left and right arrows
@@ -125,8 +78,8 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
-        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
-        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
+        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span> -->
+        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
