changed link on RBdigital slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -23,7 +23,7 @@
   <div class="mySlides my-fade">
       <figure class="slider">
           <figure>
-              <a href="/405/Digital-Resource-of-the-Month" style="text-decoration: none;">
+              <a href="/416/eBooks-Audiobooks-eMagazines#RBdigital" style="text-decoration: none;">
                   <img src="/ImageRepository/Document?documentID=864" alt="">
                   <figcaption>
                       <section>
