added Solar Eclipse slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -5,6 +5,25 @@
   <div class="mySlides my-fade">
     <figure class="slider">
         <figure>
+            <a href="https://melsawashington.evanced.info/signup/List?ln=ALL&ds=2017/08/21&de=2017/08/21&et=16" style="text-decoration: none;">
+                <img src="/ImageRepository/Document?documentID=943" alt="">
+                <figcaption>
+                    <section>
+                        <h4>Solar Eclipse
+                          <br>August 21</h4>
+                        <p>Join us for viewing parties and NASA live stream coverage.</p>
+                        <p>Times vary by library.</p>
+
+                    </section>
+                </figcaption>
+            </a>
+        </figure>
+    </figure>
+</div>
+
+  <div class="mySlides my-fade">
+    <figure class="slider">
+        <figure>
             <a href="http://www.rbdigital.com/washingtoncomn/service/magazines/landing?q=%2Fadult-coloring-books%2F&p_num=1" style="text-decoration: none;">
                 <img src="/ImageRepository/Document?documentID=938" alt="">
                 <figcaption>
@@ -78,7 +97,7 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
-        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span> -->
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
