--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -5,6 +5,23 @@
   <div class="mySlides my-fade">
     <figure class="slider">
         <figure>
+            <a href="/273/A-Library-Card" style="text-decoration: none;">
+                <img src="/ImageRepository/Document?documentID=961" alt="">
+                <figcaption>
+                    <section>
+                        <h4>September is Library Card Sign&#8209;up Month</h4>
+                        <p>Get yours today!</p>
+
+                    </section>
+                </figcaption>
+            </a>
+        </figure>
+    </figure>
+</div>
+
+  <div class="mySlides my-fade">
+    <figure class="slider">
+        <figure>
             <a href="http://www.rbdigital.com/washingtoncomn/service/magazines/landing?q=%2Fadult-coloring-books%2F&p_num=1" style="text-decoration: none;">
                 <img src="/ImageRepository/Document?documentID=938" alt="">
                 <figcaption>
@@ -78,7 +95,7 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(1)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
-        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span> -->
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
