added MN Writes MN Reads Slide to be deployed Monday

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -5,6 +5,23 @@
   <div class="mySlides my-fade">
     <figure class="slider">
         <figure>
+            <a href="/412/Publish-My-Book" style="text-decoration: none;">
+                <img src="/ImageRepository/Document?documentID=964" alt="">
+                <figcaption>
+                    <section>
+                        <h4>MN&nbsp;Writes MN&nbsp;Reads</h4>
+                        <p>Create, Share, and Read eBooks by Minnesota Authors</p>
+
+                    </section>
+                </figcaption>
+            </a>
+        </figure>
+    </figure>
+</div>
+
+  <div class="mySlides my-fade">
+    <figure class="slider">
+        <figure>
             <a href="/273/A-Library-Card" style="text-decoration: none;">
                 <img src="/ImageRepository/Document?documentID=961" alt="">
                 <figcaption>
@@ -96,7 +113,7 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
-        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
+        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
