Added Job Fair slide, removre RBdigital

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -2,15 +2,37 @@
 
 <div class="w3-content w3-display-container">
 
+
+    <div class="mySlides my-fade">
+        <figure class="slider">
+            <figure>
+                <a href="https://melsawashington.evanced.info/signup/EventDetails?EventId=28246&ln=ALL&backTo=Calendar&startDate=2017/09/11" style="text-decoration: none;">
+                    <img src="/ImageRepository/Document?documentID=972" alt="">
+                    <figcaption>
+                        <section>
+                            <h4>Job Fair</h4>
+                            <p>Tuesday, September 26, 2017
+                            <br>1:00 PM - 3:00 PM</p>
+                            <p>R. H. Stafford Library</p>
+
+
+                        </section>
+                    </figcaption>
+                </a>
+            </figure>
+        </figure>
+    </div>
+
   <div class="mySlides my-fade">
     <figure class="slider">
         <figure>
             <a href="/412/Publish-My-Book" style="text-decoration: none;">
-                <img src="/ImageRepository/Document?documentID=964" alt="">
+                <img src="/ImageRepository/Document?documentID=968" alt="">
                 <figcaption>
                     <section>
                         <h4>MN&nbsp;Writes MN&nbsp;Reads</h4>
-                        <p>Create, Share, and Read eBooks by Minnesota Authors</p>
+                        <p><strong>Authors:</strong> create and share your eBook using online tools we provide.</p>
+                        <p><strong>Readers:</strong> Find your next favorite Minnesota author.
 
                     </section>
                 </figcaption>
@@ -54,26 +76,6 @@
     </figure>
 </div>
 
-  <div class="mySlides my-fade">
-      <figure class="slider">
-          <figure>
-              <a href="/416/eBooks-Audiobooks-eMagazines#RBdigital" style="text-decoration: none;">
-                  <img src="/ImageRepository/Document?documentID=864" alt="">
-                  <figcaption>
-                      <section>
-                          <h4>RBdigital</h4>
-                          <p>New name. New look.
-                            <br>
-                            New app.</p>
-                          <h4>Same great content!</h4>
-
-
-                      </section>
-                  </figcaption>
-              </a>
-          </figure>
-      </figure>
-  </div>
 
   <div class="mySlides my-fade">
       <figure class="slider">
