update Job Fair info

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -13,8 +13,8 @@
                             <h4>Job Fair</h4>
                             <p>Tuesday, September 26, 2017
                             <br>1:00 PM - 3:00 PM</p>
-                            <p>R. H. Stafford Library</p>
-
+                            <p>R. H. Stafford Library <br>
+                              <span style="font-size: 1rem;">Valley Creek A &amp; B</span></p>
 
                         </section>
                     </figcaption>
