--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -3,25 +3,25 @@
 <div class="w3-content w3-display-container">
 
 
-    <div class="mySlides my-fade">
-        <figure class="slider">
-            <figure>
-                <a href="https://melsawashington.evanced.info/signup/EventDetails?EventId=28246&ln=ALL&backTo=Calendar&startDate=2017/09/11" style="text-decoration: none;">
-                    <img src="/ImageRepository/Document?documentID=972" alt="">
-                    <figcaption>
-                        <section>
-                            <h4>Job Fair</h4>
-                            <p>Tuesday, September 26, 2017
-                            <br>1:00 PM - 3:00 PM</p>
-                            <p>R. H. Stafford Library <br>
-                              <span style="font-size: 1rem;">Valley Creek A &amp; B</span></p>
 
-                        </section>
-                    </figcaption>
-                </a>
-            </figure>
+  <div class="mySlides my-fade">
+    <figure class="slider">
+        <figure>
+            <a href="http://clubbook.org/event/dave-page/?instance_id=160" style="text-decoration: none;">
+                <img src="/ImageRepository/Document?documentID=999" alt="">
+                <figcaption>
+                    <section>
+                        <p style="margin-bottom:0; padding-bottom:0;">Meet F. Scott Fitzgerald Scholar </p>
+                        <h4 style="margin-top:0; padding-top:0;">Dave Page</h4>
+                        <p>October 19 at 6:30 p.m. <br>
+                          R.H. Stafford Library</p>
+
+                    </section>
+                </figcaption>
+            </a>
         </figure>
-    </div>
+    </figure>
+</div>
 
   <div class="mySlides my-fade">
     <figure class="slider">
@@ -32,7 +32,7 @@
                     <section>
                         <h4>MN&nbsp;Writes MN&nbsp;Reads</h4>
                         <p><strong>Authors:</strong> create and share your eBook using online tools we provide.</p>
-                        <p><strong>Readers:</strong> Find your next favorite Minnesota author.
+                        <p><strong>Readers:</strong> Find your next favorite Minnesota author.</p>
 
                     </section>
                 </figcaption>
