added Teen Reads slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -3,6 +3,23 @@
 <div class="w3-content w3-display-container">
 
 
+    <div class="mySlides my-fade">
+      <figure class="slider">
+          <figure>
+              <a href="/255/Teen-Read-Month" style="text-decoration: none;">
+                  <img src="/ImageRepository/Document?documentID=1004" alt="">
+                  <figcaption>
+                      <section>
+                          <h4>Vote &amp; Win!<br>
+                            Teen Read Month</h4>
+                          <p>Read <em>Book Ballots</em> nominees, get a prize for voting, and enter to win the grand prize.</p>
+
+                      </section>
+                  </figcaption>
+              </a>
+          </figure>
+      </figure>
+  </div>
 
   <div class="mySlides my-fade">
     <figure class="slider">
@@ -41,22 +58,6 @@
     </figure>
 </div>
 
-  <div class="mySlides my-fade">
-    <figure class="slider">
-        <figure>
-            <a href="/273/A-Library-Card" style="text-decoration: none;">
-                <img src="/ImageRepository/Document?documentID=961" alt="">
-                <figcaption>
-                    <section>
-                        <h4>September is Library Card Sign&#8209;up Month</h4>
-                        <p>Get yours today!</p>
-
-                    </section>
-                </figcaption>
-            </a>
-        </figure>
-    </figure>
-</div>
 
   <div class="mySlides my-fade">
     <figure class="slider">
