remove Club Book slide

--- a/Slideshow_combined.html
+++ b/Slideshow_combined.html
@@ -21,24 +21,6 @@
       </figure>
   </div>
 
-  <div class="mySlides my-fade">
-    <figure class="slider">
-        <figure>
-            <a href="http://clubbook.org/event/dave-page/?instance_id=160" style="text-decoration: none;">
-                <img src="/ImageRepository/Document?documentID=999" alt="">
-                <figcaption>
-                    <section>
-                        <p style="margin-bottom:0; padding-bottom:0;">Meet F. Scott Fitzgerald Scholar </p>
-                        <h4 style="margin-top:0; padding-top:0;">Dave Page</h4>
-                        <p>October 19 at 6:30 p.m. <br>
-                          R.H. Stafford Library</p>
-
-                    </section>
-                </figcaption>
-            </a>
-        </figure>
-    </figure>
-</div>
 
   <div class="mySlides my-fade">
     <figure class="slider">
@@ -116,7 +98,7 @@
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(2)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(3)"></span>
         <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(4)"></span>
-        <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span>
+        <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(5)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(6)"></span> -->
         <!-- <span class="w3-badge demo w3-border w3-hover-grey" onclick="currentDiv(7)"></span> -->
 
